# designpatterns

./: CMakeLists.txt  README.md  build.sh
Duck/: CMakeLists.txt  Duck.cpp  Duck.hpp  main.cpp
Duck/include/: Duck.hpp
WeatherData/: CMakeLists.txt  WeatherData.cpp  WeatherData.hpp  main.cpp
WeatherData/include/: WeatherData.hpp
WeatherData/src/: WeatherData.cpp
